--- a/_tu_helper/_Py_script/2_make_image_to_audio/config3.toml
+++ b/_tu_helper/_Py_script/2_make_image_to_audio/config3.toml
@@ -7,13 +7,7 @@
 # Папка, где искать аудиофайлы. Можно оставить пустым, если используете input_files.
 #input_dir = "D:/Media/Audio"     # пример; "" — не использовать папку
 #input_dir = "D://Entertaimant//Английский//! свои рассказы//Видео2"     # пример; "" — не использовать папку
-#input_dir = "D://Entertaimant//Английский//! свои рассказы//Урок 3"     # пример; "" — не использовать папку
-
-input_dirs = [
-  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
-  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
-]
-
+input_dir = "D://Entertaimant//Английский//! свои рассказы//Урок 3"     # пример; "" — не использовать папку
 recursive = true                 # рекурсивный обход подпапок
 
 # Явный список аудиофайлов (опционально). Пути абсолютные или относительные.
