--- a/_tu_helper/_Py_script/3_make_image_text_overlay/config.toml
+++ b/_tu_helper/_Py_script/3_make_image_text_overlay/config.toml
@@ -1,6 +1,7 @@
 # === Общие параметры входа/выхода ===
 # Список папок для обхода (рекурсивно, если recursive=true)
-input_dirs = ["D://Entertaimant//Английский//! свои рассказы//Урок 1"]
+input_dirs = ["D://Entertaimant//Английский//! свои рассказы//Урок 2",
+"D://Entertaimant//Английский//! свои рассказы//Урок 3"]
 #input_dirs = ["D://Entertaimant//Английский//! свои рассказы//Видео2"]
 #input_dirs = ["./input"]
 # Явный список файлов изображений (если нужно точечно)
