--- a/_tu_helper/_Py_script/2_make_image_to_audio/config.toml
+++ b/_tu_helper/_Py_script/2_make_image_to_audio/config.toml
@@ -10,17 +10,18 @@
 #input_dir = "D://Entertaimant//Английский//! свои рассказы//Урок 3"     # пример; "" — не использовать папку
 
 input_dirs = [
-  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
-  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
+    "D://Entertaimant//Английский//! свои рассказы//Урок 4"
 ]
+#  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
+#  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
 
 recursive = true                 # рекурсивный обход подпапок
 
 # Явный список аудиофайлов (опционально). Пути абсолютные или относительные.
 # Если задан и input_dir, результаты объединяются, дубликаты удаляются.
 input_files = [
-  # "D:/Media/one.wav",
-  # "D:/Media/two.mp3",
+    # "D:/Media/one.wav",
+    # "D:/Media/two.mp3",
 ]
 
 # Расширения аудио (без учёта регистра)
