--- a/_tu_helper/_Py_script/3_make_image_text_overlay/config.toml
+++ b/_tu_helper/_Py_script/3_make_image_text_overlay/config.toml
@@ -1,17 +1,46 @@
 # === Общие параметры входа/выхода ===
 # Список папок для обхода (рекурсивно, если recursive=true)
-input_dirs = ["D://Entertaimant//Английский//! свои рассказы//Урок 2",
-"D://Entertaimant//Английский//! свои рассказы//Урок 3"]
+input_dirs = [
+    "D://Entertaimant//Английский//! свои рассказы//Урок 4"
+    #    "D://Entertaimant//Английский//! свои рассказы//Урок 2",
+    #    "D://Entertaimant//Английский//! свои рассказы//Урок 3"
+]
 #input_dirs = ["D://Entertaimant//Английский//! свои рассказы//Видео2"]
 #input_dirs = ["./input"]
 # Явный список файлов изображений (если нужно точечно)
 input_files = []
+
+#
 
 # Рекурсивный обход папок
 recursive = true
 
 # Расширения изображений
 image_extensions = [".jpg", ".jpeg", ".png", ".webp"]
+
+
+# === Фильтрация маркеров в тексте ===
+# Любые вхождения строк из списка remove_markers будут удалены из текста.
+# Например, если строка содержит "[SKIP]" — эта подстрока будет вырезана.
+# Если после удаления строка станет пустой — её поведение определяется include_empty_lines.
+remove_markers = ["[SKIP]", "[NO-TEXT]", "#hide", "<skip>", "(en)", "(ru)"]
+
+# Если нужно не вырезать маркеры, а полностью выбрасывать строки, где они встречаются —
+# включи этот флаг:
+drop_lines_with_markers = false
+
+# === Как распределять текст по найденным картинкам ===
+# "full_text"          — каждая картинка получает ВЕСЬ текст.
+# "line_by_line_cycle" — текст режется на строки и раздаётся по картинкам циклично.
+per_image_text_mode = "line_by_line_cycle"
+
+# Включать ли пустые строки при раздаче по картинкам:
+include_empty_lines = false
+
+# Сколько строк назначать на каждую картинку (только для line_by_line_cycle).
+# 1 = ранее описанное поведение "по одной строке на картинку".
+# 2 и более = на одну картинку пойдёт блок из N строк подряд.
+lines_per_image = 1
 
 # Имя/расширение текстового файла-пары (строго .txt)
 text_extension = ".txt"
@@ -47,7 +76,7 @@ output_dir = ""
 # "suffix"         — имя + "_with_text" (без перезаписи исходников)
 # "overwrite"      — перезаписывать исходник
 # "skip_if_exists" — пропускать, если выходной уже существует
-output_naming = "overwrite"
+output_naming = "suffix"
 
 # Суффикс для режима "suffix"
 output_suffix = "_tx"
