--- a/_tu_helper/_Py_script/3_make_image_text_overlay/config.toml
+++ b/_tu_helper/_Py_script/3_make_image_text_overlay/config.toml
@@ -2,85 +2,95 @@
 # Список папок для обхода (рекурсивно, если recursive=true)
 input_dirs = [
     "D://Entertaimant//Английский//! свои рассказы//Урок 4"
-    #    "D://Entertaimant//Английский//! свои рассказы//Урок 2",
-    #    "D://Entertaimant//Английский//! свои рассказы//Урок 3"
 ]
-#input_dirs = ["D://Entertaimant//Английский//! свои рассказы//Видео2"]
 #input_dirs = ["./input"]
-# Явный список файлов изображений (если нужно точечно)
-input_files = []
 
-#
+# Явный список TXT-файлов (если нужно точечно)
+input_files = []
 
 # Рекурсивный обход папок
 recursive = true
 
-# Расширения изображений
+# Расширения изображений, подходящих для наложения текста
 image_extensions = [".jpg", ".jpeg", ".png", ".webp"]
-
-
-# === Фильтрация маркеров в тексте ===
-# Любые вхождения строк из списка remove_markers будут удалены из текста.
-# Например, если строка содержит "[SKIP]" — эта подстрока будет вырезана.
-# Если после удаления строка станет пустой — её поведение определяется include_empty_lines.
-remove_markers = ["[SKIP]", "[NO-TEXT]", "#hide", "<skip>", "(en)", "(ru)"]
-
-# Если нужно не вырезать маркеры, а полностью выбрасывать строки, где они встречаются —
-# включи этот флаг:
-drop_lines_with_markers = false
-
-# === Как распределять текст по найденным картинкам ===
-# "full_text"          — каждая картинка получает ВЕСЬ текст.
-# "line_by_line_cycle" — текст режется на строки и раздаётся по картинкам циклично.
-per_image_text_mode = "line_by_line_cycle"
-
-# Включать ли пустые строки при раздаче по картинкам:
-include_empty_lines = false
-
-# Сколько строк назначать на каждую картинку (только для line_by_line_cycle).
-# 1 = ранее описанное поведение "по одной строке на картинку".
-# 2 и более = на одну картинку пойдёт блок из N строк подряд.
-lines_per_image = 1
-
-# Имя/расширение текстового файла-пары (строго .txt)
-text_extension = ".txt"
 
 # Кодировка текстовых файлов
 text_encoding = "utf-8"
 
+
+# === Фильтрация маркеров в тексте ===
+# Любые вхождения строк из списка remove_markers будут удалены из текста.
+# Если после удаления строка станет пустой — её поведение определяется include_empty_lines.
+# ВАЖНО: каждый маркер — отдельный элемент массива (НЕ пишите "(ru), (v:ryan)" в одном элементе).
+remove_markers = ["[SKIP]", "[NO-TEXT]", "#hide", "<skip>", "(en)", "(ru)", "(v:ryan)"]
+
+# Если true — строки, содержащие ЛЮБОЙ маркер, удаляются целиком (а не только маркер внутри).
+drop_lines_with_markers = false
+
+
+# === Как распределять текст по найденным картинкам ===
+# "full_text"          — каждая выбранная картинка получает ВЕСЬ текст.
+# "line_by_line_cycle" — текст режется на строки/блоки строк и раздаётся по картинкам циклично.
+per_image_text_mode = "line_by_line_cycle"
+
+# Включать ли пустые строки при раздаче по картинкам (имеет смысл для line_by_line_cycle)
+include_empty_lines = false
+
+# Сколько строк назначать на одну картинку (только для line_by_line_cycle):
+# 1  — по одной строке на картинку;
+# 2+ — блок из N строк на картинку.
+lines_per_image = 1
+
+
+# === Какие картинки обрабатывать ===
+# "all"   — обрабатывать все найденные картинки,
+# "first" — использовать только ПЕРВУЮ подходящую картинку (полезно, если хотим «весь текст в одну»).
+target_images = "all"
+
+
 # === Поиск картинок для текста ===
-# image_match_mode определяет, какие картинки считаются "парами" к тексту:
-#
-#   "exact"  — искать только картинку с точно таким же именем, как у текста
-#              (пример: promo.txt → promo.jpg / promo.png / promo.webp).
-#
-#   "prefix" — искать все картинки, имя которых начинается с имени текстового файла,
-#              включая варианты с суффиксами.
-#              (пример: promo.txt → promo.jpg, promo_1.png, promo-final.png,
-#                        promo v3.png, promo@2x.webp, promo (copy).jpeg).
-#
-# То есть:
-# - exact  = один текст → одна картинка (строгое совпадение).
-# - prefix = один текст → несколько картинок (все, начинающиеся с этого имени).
-#
-# Рекомендуется "prefix", если к одному тексту может быть несколько версий картинки
-# (разные размеры, версии, варианты).
-# Если всегда "один текст ↔ одна картинка", то можно поставить "exact".
+# "exact"  — искать только картины с точно таким же именем, как у текста (promo.txt → promo.jpg/png/webp)
+# "prefix" — искать все картинки, имя которых НАЧИНАЕТСЯ с имени текста (promo_1.jpg, promo-final.png, и т.п.)
 image_match_mode = "prefix"
 
-# Куда сохранять результат ("" = рядом с исходником; иначе — в эту папку, будет создана)
+
+# === Куда и как сохранять результат ===
+# Куда сохранять результат: "" — рядом с исходником; иначе — в указанную папку (будет создана)
 output_dir = ""
 #output_dir = "./output"
 
 # Схема имени выходного файла:
-# "suffix"         — имя + "_with_text" (без перезаписи исходников)
+# "suffix"         — имя + output_suffix (без перезаписи исходника)
 # "overwrite"      — перезаписывать исходник
 # "skip_if_exists" — пропускать, если выходной уже существует
+# РЕКОМЕНДАЦИЯ: при циклической индексации используйте "suffix".
 output_naming = "suffix"
 
-# Суффикс для режима "suffix"
-output_suffix = "_tx"
+# Суффикс для режима "suffix" ("" допустимо; используйте вместе с cycle_output_indexing для photo1.jpg, photo2.jpg, ...)
+output_suffix = "_"
 
+# Принудительный формат сохранения: "" = как у исходника; либо "JPEG"/"PNG"/"WEBP"
+save_format = ""
+
+# Качество (где применимо)
+jpeg_quality = 90
+webp_quality = 90
+
+
+# === Индексация при циклической раздаче строк ===
+# Когда одна и та же картинка используется несколько раз (например, строк больше, чем картинок),
+# включите индексацию, чтобы не перезаписывать файл, а создавать image_1, image_2, ...
+cycle_output_indexing = true
+cycle_index_start = 1         # начало нумерации
+cycle_index_pad = 0           # 0 = без ведущих нулей; 2 → 01, 02, ...
+# Плейсхолдеры: {stem} — имя без расширения; {i} — индекс; {suffix} — output_suffix (если naming="suffix"); {ext} — расширение с "."
+cycle_index_name_template = "{stem}{suffix}{i}{ext}"
+
+
+# === Удаление исходной картинки после успешного сохранения ===
+# Если true — после успешного сохранения результата исходная картинка удаляется.
+# Защита: не удаляем при dry_run=true и если итоговый путь совпадает с исходным (overwrite).
+delete_original_after_success = true
 
 
 # === Наложение текста ===
@@ -90,27 +100,26 @@ font_path = "C:/Windows/Fonts/arial.ttf"
 # Размер шрифта: число или "auto"
 font_size = "auto"
 
-# Минимальный размер шрифта при автоподборе (см)
+# Минимальный размер шрифта при автоподборе
 min_font_size = 14
 
-# Цвет текста (белый)
+# Цвет текста
 color = "#FFFFFF"
 
 # Стиль читабельности (фон/контур):
-# Варианты:
-#  - "none"  — без улучшений
-#  - "stroke" — только контур
-#  - "box"   — полупрозрачная подложка под текст
-#  - "both"  — и подложка, и контур
+#  - "none"   — без улучшений
+#  - "stroke" — контур
+#  - "box"    — полупрозрачная подложка
+#  - "both"   — и подложка, и контур
 readability_style = "none"
 
 # Контур текста (для "stroke" и "both")
 stroke_width = 2
 stroke_fill = "#000000"
 
-# Подложка под текст (для "box" и "both"), RGBA в формате #RRGGBBAA
-#background_box_fill = "#00000080"  # чёрный, 50% непрозрачность
-background_box_fill = "#00000040"  # чёрный, 25 непрозрачность
+# Подложка под текст (для "box" и "both"), RGBA #RRGGBBAA
+# background_box_fill = "#00000080"  # чёрный, 50% непрозрачность
+background_box_fill = "#00000040"    # чёрный, ~25%
 
 # Выравнивание строк: "left" | "center" | "right"
 align = "center"
@@ -129,20 +138,13 @@ margin_y = 32
 max_width_pct = 0.90
 max_height_pct = 0.90
 
-# Межстрочный интервал (множитель к высоте строки)
+# Межстрочный интервал (множитель)
 line_spacing = 1.20
 
 
 # === Прочее ===
-# Учитывать EXIF-ориентацию (чтобы текст был поверх правильной ориентации)
+# Учитывать EXIF-ориентацию
 respect_exif_orientation = true
-
-# Принудительный формат сохранения: "" = как у исходника; или "JPEG"/"PNG"/"WEBP"
-save_format = ""
-
-# Качество (где применимо)
-jpeg_quality = 90
-webp_quality = 90
 
 # Логи
 logging_level = "INFO"
@@ -151,30 +153,3 @@ log_file = "overlay.log"
 
 # Сухой запуск: true = только отчёт, файлы не пишутся
 dry_run = false
-
-
-#Чёрный фон (разная прозрачность)
-#000000FF → чёрный полностью непрозрачный
-#000000CC → чёрный ~80% непрозрачности
-#00000080 → чёрный ~50% (как в примере)
-#00000040 → чёрный ~25%
-#00000020 → чёрный ~12%
-
-#Белый фон
-#FFFFFFFF → белый полностью непрозрачный
-#FFFFFFCC → белый 80%
-#FFFFFF80 → белый 50%
-#FFFFFF40 → белый 25%
-
-#Серый фон
-#808080FF → серый полностью непрозрачный
-#80808080 → серый 50%
-#80808040 → серый 25%
-
-#Цветные примеры
-#FF000080 → красный 50%
-#00FF0080 → зелёный 50%
-#0000FF80 → синий 50%
-#FFFF0080 → жёлтый 50%
-#00FFFF80 → бирюзовый 50%
-#FF00FF80 → пурпурный 50%
