--- a/_tu_helper/_Py_script/_make_video/3_make_image_text_overlay/config.toml
+++ b/_tu_helper/_Py_script/_make_video/3_make_image_text_overlay/config.toml
@@ -1,7 +1,7 @@
 # === Общие параметры входа/выхода ===
 # Список папок для обхода (рекурсивно, если recursive=true)
 input_dirs = [
-    "D://Entertaimant//Английский//! свои рассказы//Урок 4"
+    "D:/Entertaiment/Английский/data/Урок 4"
 ]
 #input_dirs = ["./input"]
 
