--- a/_tu_helper/_Py_script/_make_video/2_make_image_to_audio/config.toml
+++ b/_tu_helper/_Py_script/_make_video/2_make_image_to_audio/config.toml
@@ -10,7 +10,7 @@
 #input_dir = "D://Entertaimant//Английский//! свои рассказы//Урок 3"     # пример; "" — не использовать папку
 
 input_dirs = [
-    "D://Entertaimant//Английский//! свои рассказы//Урок 4"
+    "D:/Entertaiment/Английский/data/Урок 4"
 ]
 #  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
 #  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
