--- a/_tu_helper/_Py_script/_make_video/4_make_video_from_audio_and_image/config.toml
+++ b/_tu_helper/_Py_script/_make_video/4_make_video_from_audio_and_image/config.toml
@@ -18,7 +18,7 @@ mode = "dirs"  # варианты: "dir" | "file_list"
 
 # Если mode = "dirs" — список папок с аудио:
 input_dirs = [
-    "D://Entertaimant//Английский//! свои рассказы//Урок 4",
+    "D:/Entertaiment/Английский/data/Урок 4",
     #  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
     #  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
 ]
@@ -55,11 +55,13 @@ image_suffixes = ["*"]
 # Чтобы разрешить любые — замените на ["*"].
 
 [slideshow]
-enabled = false          # true — один ролик-слайдшоу; false — по ролику на каждую картинку
-order = "name"          # "name" (по имени файла) | "mtime" (по дате изменения)
-transition = "none"     # "none" | "crossfade"  (пока реализован "none")
-crossfade_sec = 0.5     # задел под будущее (кроссфейд), сейчас не используется
-min_image_sec = 0.3     # минимальная длительность показа одного кадра, сек (страховка)
+enabled = true                  # true — один ролик-слайдшоу иначе по ролику на каждый файл
+order = "name"                  # "name" | "mtime"
+source = "auto"                 # "auto"|"file"|"suffix"|"auto_equal"
+timings_file_ext = ".slides.txt"# имя файла-таймингов: <stem><ext> рядом с аудио
+min_image_sec = 0.3             # минимальная длительность кадра
+fill_policy = "stretch_last"    # "stretch_last"|"scale_all"|"clip"
+delete_images_after = true
 
 # --------- Вывод ----------
 [output]
