--- a/_tu_helper/_Py_script/_make_video/2_make_image_to_audio/config.toml
+++ b/_tu_helper/_Py_script/_make_video/2_make_image_to_audio/config.toml
@@ -9,9 +9,8 @@
 #input_dir = "D://Entertaimant//Английский//! свои рассказы//Видео2"     # пример; "" — не использовать папку
 #input_dir = "D://Entertaimant//Английский//! свои рассказы//Урок 3"     # пример; "" — не использовать папку
 
-input_dirs = [
-    "D:/Entertaiment/Английский/data/Урок 4"
-]
+input_dirs = ['D:/Entertaiment/Английский/data/Урок 4']
+
 #  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
 #  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
 
@@ -29,17 +28,17 @@ audio_exts = [".mp3", ".wav", ".m4a", ".flac", ".aac", ".ogg"]
 
 # --- Фильтрация по суффиксам (только эти два параметра) ---
 # Файлы, чьё имя (без расширения) заканчивается на любой из этих суффиксов — исключаются
-exclude_suffixes = ["_ru", "_draft"]
+exclude_suffixes = ['_ru', '_draft']
 
 # Если список НЕ ПУСТОЙ — берём ТОЛЬКО файлы с этими суффиксами в конце имени (без расширения).
 # Если список ПУСТОЙ — ограничение не применяется.
-include_suffixes = ["_en", "_di"]
+include_suffixes = ['_en', '_di']
 
 # --- Выход ---
 # Куда сохранять картинки. "" или отсутствие параметра — рядом с исходным аудио.
 output_dir = ""                  # "" => рядом с аудио
 mirror_subdirs = true            # Если output_dir задан, повторять структуру подпапок входа
-output_suffix = "_bg"            # Суффикс к имени картинки. "" = без суффикса (например: song_bg.png)
+output_suffix = '_bg'            # Суффикс к имени картинки. "" = без суффикса (например: song_bg.png)
 
 # Политика при конфликте имён:
 #  - "skip"      — пропустить, если файл уже существует
