--- a/_tu_helper/_Py_script/_make_video/3_make_image_text_overlay/config.toml
+++ b/_tu_helper/_Py_script/_make_video/3_make_image_text_overlay/config.toml
@@ -1,8 +1,7 @@
 # === Общие параметры входа/выхода ===
 # Список папок для обхода (рекурсивно, если recursive=true)
-input_dirs = [
-    "D:/Entertaiment/Английский/data/Урок 4"
-]
+input_dirs = ['D:/Entertaiment/Английский/data/Урок 4']
+
 #input_dirs = ["./input"]
 
 # Явный список TXT-файлов (если нужно точечно)
