--- a/_tu_helper/_Py_script/_make_video/4_make_video_from_audio_and_image/config.toml
+++ b/_tu_helper/_Py_script/_make_video/4_make_video_from_audio_and_image/config.toml
@@ -17,11 +17,9 @@ mode = "dirs"  # варианты: "dir" | "file_list"
 #input_dir = "D://Entertaimant//Английский//! свои рассказы//Урок 1"   # папка с аудио
 
 # Если mode = "dirs" — список папок с аудио:
-input_dirs = [
-    "D:/Entertaiment/Английский/data/Урок 4",
+input_dirs = ['D:/Entertaiment/Английский/data/Урок 4']
     #  "D://Entertaimant//Английский//! свои рассказы//Урок 2",
     #  "D://Entertaimant//Английский//! свои рассказы//Урок 3"
-]
 
 recurse = true                       # рекурсивно обходить подпапки (true/false)
 
