--- a/_tu_helper/_Py_script/_make_video/_master_run/master_config.toml
+++ b/_tu_helper/_Py_script/_make_video/_master_run/master_config.toml
@@ -1,23 +1,17 @@
-# master_config.toml (под вашу структуру из архива)
-# Этот файл кладём в: _make_video/_master_run/master_config.toml
-# ВНИМАНИЕ: targets и scripts резолвятся относительно РОДИТЕЛЬСКОЙ папки (_make_video).
-
+# master_config.toml — новый формат с skip / halt_after и [[steps.params]]
 [globals]
-# Унифицированные входные директории для всех шагов
 input_dirs = ["D:/Entertaiment/Английский/data/Урок 4"]
-
-# Унифицированные суффиксы для 2_make_image_to_audio (если нужно)
 include_suffixes = ["_en", "_di"]
 exclude_suffixes = ["_ru", "_draft"]
 output_suffix   = "_bg"
+delete_images_after = true
 
 [options]
 dry_run = false
 continue_on_error = false
-backup_configs = true
+backup_configs = false
 python_executable = ""
 
-# 1) Применяем только input_dirs во все конфиги, где ключ существует
 [[steps]]
 type = "set_params"
 targets = [
@@ -27,53 +21,64 @@ targets = [
   "3_make_image_text_overlay/config.toml",
   "4_make_video_from_audio_and_image/config.toml"
 ]
-only_keys = ["input_dirs"]
+skip = false
+halt_after = false
+  [[steps.params]]
+  key = "input_dirs"
+  use = "global"
 
-# 2) Запускаем разбиение уроков
 [[steps]]
 type = "run_script"
 script = "0_split_lesson_file/split_lesson_file.py"
 args = []
+skip = false
+halt_after = false
 
-# 3) (опционально) Можно было бы поменять голос/языки TTS — но таких ключей "language" нет.
-#    Поэтому сейчас прокидываем снова только input_dirs, если вы их меняли выше.
 [[steps]]
-type = "set_params"
+type = "set_params_and_run"
 targets = ["1_make_audio_tts_from_text/tts_config.toml"]
-only_keys = ["input_dirs"]
+skip = false
+halt_after = false
+  [[steps.params]]
+  key = "input_dirs"
+  use = "global"
+  [steps.run]
+  script = "1_make_audio_tts_from_text/tts_batch_reader.py"
+  args = []
 
-[[steps]]
-type = "run_script"
-script = "1_make_audio_tts_from_text/tts_batch_reader.py"
-
-# 4) В шаге для 2_make_image_to_audio — применяем include/exclude/output_suffix и запускаем
 [[steps]]
 type = "set_params_and_run"
 targets = ["2_make_image_to_audio/config.toml"]
-only_keys = ["include_suffixes", "exclude_suffixes", "output_suffix"]
-
-  [steps.step_params]
-  # Локальные переопределения для этого шага (если нужны)
-  # output_suffix = "_bg"
-
+skip = false
+halt_after = false
+  [[steps.params]]
+  key = "include_suffixes"
+  use = "global"
+  [[steps.params]]
+  key = "exclude_suffixes"
+  use = "global"
+  [[steps.params]]
+  key = "output_suffix"
+  use = "value"
+  value = "_bg"
   [steps.run]
   script = "2_make_image_to_audio/make_image_to_audio.py"
   args = []
 
-# 5) Наложение текста: обычно тоже зависит от input_dirs; просто запускаем
 [[steps]]
 type = "run_script"
 script = "3_make_image_text_overlay/image_text_overlay.py"
+skip = false
+halt_after = false
 
-# 6) Финальный рендер из аудио+картинок; можно включить удаление картинок после сборки
 [[steps]]
 type = "set_params_and_run"
 targets = ["4_make_video_from_audio_and_image/config.toml"]
-only_keys = ["delete_images_after"]
-
-  [steps.step_params]
-  delete_images_after = true
-
+skip = false
+halt_after = false
+  [[steps.params]]
+  key = "delete_images_after"
+  use = "global"
   [steps.run]
   script = "4_make_video_from_audio_and_image/make_video_from_audio_and_image.py"
   args = []
