--- a/_tu_helper/_Py_script/_make_video/3_make_image_text_overlay/config2.toml
+++ b/_tu_helper/_Py_script/_make_video/3_make_image_text_overlay/config2.toml
@@ -27,14 +27,7 @@ multi_sources_patterns = [
 # Любые вхождения строк из списка remove_markers будут удалены из текста.
 # Если после удаления строка станет пустой — её поведение определяется include_empty_lines.
 # ВАЖНО: каждый маркер — отдельный элемент массива (НЕ пишите "(ru), (v:ryan)" в одном элементе).
-#remove_markers = ["[SKIP]", "[NO-TEXT]", "#hide", "<skip>", "(en)", "(ru)", "(v:ryan)"]
-remove_markers = [
-  "(ua)",     # буквальный маркер
-  "(en)",     # буквальный маркер
-  "(ru)",     # буквальный маркер
-  "(v:*)",    # вайлдкард: убирает всё от "(v:" до ближайшей ")"
-  "[SKIP]"
-]
+remove_markers = ["[SKIP]", "[NO-TEXT]", "#hide", "<skip>", "(en)", "(ru)", "(v:ryan)"]
 
 # Если true — строки, содержащие ЛЮБОЙ маркер, удаляются целиком (а не только маркер внутри).
 drop_lines_with_markers = false
